improve the About page link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,14 +18,15 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Brand</a>
+        <!--<a class="navbar-brand" href="/">Brand</a>-->
+        <%= link_to 'Brand', root_path, class: 'navbar-brand' %> <!--Im a ruby code and do the same like line 21 -->
       </div>
   
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Link</a></li>
+          <li class="active"><a href="#">Link1 <span class="sr-only">(current)</span></a></li>
+          <li><a href="#">Link2</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -36,7 +37,7 @@
               <li><a href="#">Separated link</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#">One more separated link</a></li>
-            </ul>
+            </ul> 
           </li>
         </ul>
         <form class="navbar-form navbar-left" role="search">
@@ -46,7 +47,8 @@
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Link</a></li>
+          <!--<li><a href="/about">About</a></li>-->
+          <li><%= link_to "About", about_path %></li> 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -63,7 +65,7 @@
   </nav>
 
 
-<%= yield %>
+<%= yield %> <!--erb tag RUBY code inside the html page-->
 
 </body>
 </html>
