Added bootstrap class

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,8 +64,9 @@
     </div><!-- /.container-fluid -->
   </nav>
 
-
-<%= yield %> <!--erb tag RUBY code inside the html page-->
+<div Class="container"> <!--come from bootstrap-->
+  <%= yield %> <!--erb tag RUBY code inside the html page-->
+</div>
 
 </body>
 </html>
