Added font awesomegem and logo to navbar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <div class="jumbotron text-center">
-    <h1> Welcome to My FIRST SITE </h1>
-    <h3> A membership site where anybody can meet developers.</h3>
+    <h1> Welcome to molnART  </h1>
+    <h3> A site what combine logic and ART.</h3>
 </div>
