--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SimplecodecastsSaas</title>
+  <title>molnART </title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -18,8 +18,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <!--<a class="navbar-brand" href="/">Brand</a>-->
-        <%= link_to 'Brand', root_path, class: 'navbar-brand' %> <!--Im a ruby code and do the same like line 21 -->
+        
+        <%= link_to root_path, class: 'navbar-brand' do %>
+          <i class="fa fa-users"></i> <!--our logo-->
+          molnART
+          <% end %>
+          
       </div>
   
       <!-- Collect the nav links, forms, and other content for toggling -->
