--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,23 +1,24 @@
 <div class="row">
-    <div class="col-sm-6 col-sm-offset-3"> 
+    <div class="col-sm-6 col-sm-offset-3">
         <div class="well">
-            <form accept-chraset="UTF-8" action="/contacts" class="new_contact" id="new_contact" method="post">
-            <!--<div style="display:none">...</div> -->
+            <%= form_for (@contact) do |f| %>
+                <div class="form-group">
+                    <%= f.label :name %>
+                    <%= f.text_field :name, class: 'form-control' %> 
+                </div>
+                
+                <div class="form-group">
+                    <%= f.label :email %>
+                    <%= f.email_field :email, class: 'form-control' %>
+                </div>
+                
+                <div class="form-group">
+                    <%= f.label :comments %>
+                    <%= f.text_area :comments, class: 'form-control' %>
+                </div>
+                <%= f.submit 'Submit', class: 'btn btn-default'%>
             
-                <div class="form-group">
-                    <label class="from-control" for="contact_name">Name</label>
-                    <input id="contact_name" name="contact[name]" type="text" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="contact_email">Email</label>
-                    <input id="contact_email" name="contact[emial]" type="emial" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="contact_comments">Comments</label>
-                    <textarea id="contact_comments" name="contact[comments]" class="form-control"></textarea>
-                </div>
-                <input type="submit" value="Submit" class="btn btn-default">
-            </form>
-        </div>    
+            <% end %> 
+        </div>
     </div>
 </div>
