--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,16 +51,17 @@
         <ul class="nav navbar-nav navbar-right">
           <!--<li><a href="/about">About</a></li>-->
           <li><%= link_to "About", about_path %></li> 
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li>
+          <li><%= link_to "Contact Us", new_contact_path %></li> 
+          <!--<li class="dropdown">-->
+          <!--  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
+          <!--  <ul class="dropdown-menu">-->
+          <!--    <li><a href="#">Action</a></li>-->
+          <!--    <li><a href="#">Another action</a></li>-->
+          <!--    <li><a href="#">Something else here</a></li>-->
+          <!--    <li role="separator" class="divider"></li>-->
+          <!--    <li><a href="#">Separated link</a></li>-->
+          <!--  </ul>-->
+          <!--</li>-->
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
