--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,27 +27,27 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Link1 <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Link2</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown 1<span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul> 
-          </li>
+          <!--<li class="active"><a href="#">Link1 <span class="sr-only">(current)</span></a></li>-->
+          <!--<li><a href="#">Link2</a></li>-->
+          <!--<li class="dropdown">-->
+          <!--  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown 1<span class="caret"></span></a>-->
+            <!--<ul class="dropdown-menu">-->
+            <!--  <li><a href="#">Action</a></li>-->
+            <!--  <li><a href="#">Another action</a></li>-->
+            <!--  <li><a href="#">Something else here</a></li>-->
+            <!--  <li role="separator" class="divider"></li>-->
+            <!--  <li><a href="#">Separated link</a></li>-->
+            <!--  <li role="separator" class="divider"></li>-->
+            <!--  <li><a href="#">One more separated link</a></li>-->
+            <!--</ul> -->
+          <!--</li>-->
         </ul>
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+        <!--<form class="navbar-form navbar-left" role="search">-->
+        <!--  <div class="form-group">-->
+        <!--    <input type="text" class="form-control" placeholder="Search">-->
+        <!--  </div>-->
+        <!--  <button type="submit" class="btn btn-default">Submit</button>-->
+        <!--</form>-->
         <ul class="nav navbar-nav navbar-right">
           <!--<li><a href="/about">About</a></li>-->
           <li><%= link_to "About", about_path %></li> 
@@ -67,7 +67,11 @@
     </div><!-- /.container-fluid -->
   </nav>
 
-<div Class="container"> <!--come from bootstrap-->
+<div class="container"> <!--come from bootstrap-->
+  <% flash.each do |key, value| %> <!-- to see teh flash function -->
+    <%= content_tag :div, value, class: "alert alert-#{key}" %>
+  <% end %>
+    
   <%= yield %> <!--erb tag RUBY code inside the html page-->
 </div>
 
