--- a/app/views/Contact_mailer/contact_email.html.erb
+++ b/app/views/Contact_mailer/contact_email.html.erb
@@ -3,10 +3,9 @@
     <head>
     </head>
     <body>
-         <p>
-             You have received a message from the site`s contact form, from:
+         <p>You have received a message from the site`s contact form, from
              <%= "#{ @name }, #{ @email }." %>
         </p>   
-        <p> <%= @body %> </p>
+        <p><%= @body %> </p>
     </body>
 </html>
